--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
+    color: #f00;
     background-color: #000;
 }
 
@@ -116,6 +116,7 @@ a:focus {
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
+        background-color: rgba(0,0,0,.3);
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
@@ -153,10 +154,17 @@ a:focus {
 
 .intro .intro-body .brand-heading {
     font-size: 40px;
+    background-color: rgba(0,0,0,.3);
+    border: 2px solid #f00;
+    border-radius: 25px;
+    color: #f00;
 }
 
 .intro .intro-body .intro-text {
     font-size: 18px;
+    background-color: rgba(0,0,0,.5);
+    border: 1px solid #f00;
+    border-radius: 15px;
 }
 
 @media(min-width:767px) {
@@ -179,10 +187,10 @@ a:focus {
     height: 70px;
     margin-top: 15px;
     padding: 7px 16px;
-    border: 2px solid #fff;
+    border: 2px solid #f00;
     border-radius: 35px;
     font-size: 40px;
-    color: #fff;
+    color: #f00;
     background: 0 0;
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: background .3s ease-in-out;
@@ -192,7 +200,7 @@ a:focus {
 .btn-circle:hover,
 .btn-circle:focus {
     outline: 0;
-    color: #fff;
+    color: #f00;
     background: rgba(255,255,255,.1);
 }
 
@@ -252,16 +260,24 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
+.content-section h2{
+color: #fff;
+}
+
+.members-section {
     width: 100%;
     padding: 50px 0;
-    color: #fff;
+    color: #f00;
     background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+.members-section h2{
+color: #fff;
 }
 
 #map {
@@ -272,10 +288,10 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
 
-    .download-section {
+    .members-section {
         padding: 100px 0;
     }
 
@@ -295,17 +311,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #219ab3;
-    color: #219ab3;
+    border: 1px solid #fff;
+    color: #fff;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #219ab3;
+    border: 1px solid #fff;
     outline: 0;
     color: #000;
-    background-color: #219ab3;
+    background-color: #fff;
 }
 
 ul.banner-social-buttons {
