--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -242,7 +242,7 @@ a {
     padding-top: 100px;
 }
 
-.download-section {
+.members-section {
     width: 100%;
     padding: 50px 0;
     color: @light;
@@ -265,7 +265,7 @@ a {
         padding-top: 250px;
     }
 
-    .download-section {
+    .members-section {
         padding: 100px 0;
     }
 
