--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -286,6 +286,10 @@ color: #fff;
     margin-top: 100px;
 }
 
+.live-page {
+    background-color: rgba(255,255,255,.3); 
+}
+
 @media(min-width:767px) {
     .content-section {
         padding-top: 150px;
