--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -110,6 +110,36 @@ a:focus {
     background-color: rgba(255,255,255,.3);
 }
 
+.chi-sig-member h4 {
+    color: white;
+    margin-bottom: 1%;
+    float: left;
+    display: block;
+}
+
+.chi-sig-member p {
+    color: white;
+    display: block;
+    float: left;
+    font-size: .84em;
+    text-align: justify;
+}
+
+.chi-sig-member-info {
+    float: left;
+    width: 65%;
+    text-overflow: inherit
+}
+
+.chi-sig-member-image {
+    float: left;
+    max-width: 250px;
+    min-width: 150px;
+    margin-right 3%;
+    padding: 2%;
+    width: 35%;
+}
+
 @media(min-width:767px) {
     .navbar {
         padding: 20px 0;
@@ -280,6 +310,13 @@ color: #fff;
 color: #fff;
 }
 
+.chi-sig-member {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 5%;
+}
+
 #map {
     width: 100%;
     height: 200px;
@@ -289,6 +326,7 @@ color: #fff;
 .live-page {
     background-color: rgba(255,255,255,.3); 
 }
+
 
 @media(min-width:767px) {
     .content-section {
@@ -303,6 +341,12 @@ color: #fff;
         height: 400px;
         margin-top: 250px;
     }
+.chi-sig-member {
+    float: left;
+    margin-bottom: 4%;
+    width: 48%;
+    margin-right: 2%;
+}
 }
 
 .btn {
