--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -340,12 +340,12 @@ color: #fff;
         height: 400px;
         margin-top: 250px;
     }
-.chi-sig-member {
+    .chi-sig-member {
     float: left;
-    margin-bottom: 4%;
+    margin-bottom: 0px;
     width: 48%;
     margin-right: 2%;
-}
+    }
 }
 
 .btn {
