--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -323,13 +323,13 @@ color: #fff;
 }
 
 .live-page {
-    background-color: rgba(255,255,255,.3); 
+    background-color: rgba(255,255,255,.3) !important;
 }
 
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 150px;
+        padding-top: 115px;
     }
 
     .members-section {
