--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -113,8 +113,13 @@ a:focus {
 .chi-sig-member h4 {
     color: white;
     margin-bottom: 1%;
-    float: left;
     display: block;
+    margin: 0 0 20px;
+}
+
+.chi-sig-member h6 {
+    color: #f00;
+    margin: 0 0 20px;
 }
 
 .chi-sig-member p {
