--- a/css/pages.css
+++ b/css/pages.css
@@ -14,6 +14,17 @@ Includes the custom CSS styling for the website's members, events, and about pag
     background-color:#ffffff;
     background-size: 64px 128px
 }
+
+.header {
+    width: 100%;
+    height: 100%;
+    min-height: 200px;
+    max-height: 400px;
+}
+.header h1 {
+    padding: auto;
+    text-align: center;
+}
 /* Photos */
 .mdl-card__title {
     background-color: none;
@@ -49,6 +60,7 @@ Includes the custom CSS styling for the website's members, events, and about pag
     max-width: 900px;
     margin: 0 auto;
     align-content: center;
+    padding-bottom: 80px
 }
 .mdl-card {
     width: 100%;
