about page update
kinda sloppy, needs stylesheet refactoring (ew)

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -19,7 +19,6 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #f00;
-    background-color: #000;
 }
 
 html {
@@ -49,7 +48,7 @@ p {
 @media(min-width:767px) {
     p {
         margin: 0 0 35px;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 1.6;
     }
 }
@@ -159,8 +158,8 @@ a:focus {
         padding: 20px 0;
         border-bottom: 0;
         letter-spacing: 1px;
-        background: 0 0;
-        background-color: rgba(0,0,0,.3);
+        background: #ffffff;
+        opacity: 100;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
