--- a/css/pages.css
+++ b/css/pages.css
@@ -33,26 +33,65 @@ Includes the custom CSS styling for the website's members, events, and about pag
 
 
 
-h2 {
-    font-size: 62px;
-    letter-spacing: 4px;
+#about h2 {
+    font-size: 70px;
+    position: absolute;
+    letter-spacing: 14px;
     padding-bottom: 40px;
     font-family: 'CircularBold', Helvetica, sans-serif;
+    left: 0px;
+    z-index: -10;
+    opacity: 0.7;
 }
 
 #about p {
     font-family: "CircularStd", Helvetical, sans-serif;
     letter-spacing: .4px;
 }
+#about .content {
+    padding-top: 150px
+}
+.crest-footer {
+    text-align: center;
+    margin: 50px auto 30px;
+}
+.crest-footer img {
+    width: 100px;
+    height: auto;
+}
 
-
+@media (max-width: 550px) {
+    #about .content {
+        width: 100vw !important;
+    }
+}
+@media (min-width: 550px) {
+    #about h2 {
+        font-size: 10em;
+        left: -35px;
+    }
+    #about .content {
+        padding-top: 250px;
+    }
+}
+@media (min-width: 990px) {
+    #about h2 {
+        font-size: 15em;
+        left: -100px;
+    }
+}
+@media (min-width: 1180px) {
+    #about h2 {
+        left: -150px
+    }
+}
 /* Members Page
 ================================== */
 
 #members {
     background:
-        linear-gradient(135deg, #ffffff 22px, #efefef 22px, #efefef 24px, transparent 24px, transparent 67px, #efefef 67px, #efefef 69px, transparent 69px),
-        linear-gradient(225deg, #ffffff 22px, #efefef 22px, #efefef 24px, transparent 24px, transparent 67px, #efefef 67px, #efefef 69px, transparent 69px)0 64px;
+        linear-gradient(135deg, #ffffff 22px, #f2f2f2 22px, #f2f2f2 24px, transparent 24px, transparent 67px, #f2f2f2 67px, #f2f2f2 69px, transparent 69px),
+        linear-gradient(225deg, #ffffff 22px, #f2f2f2 22px, #f2f2f2 24px, transparent 24px, transparent 67px, #f2f2f2 67px, #f2f2f2 69px, transparent 69px)0 64px;
     background-color:#ffffff;
     background-size: 64px 128px
 }
