--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -13,6 +13,16 @@ Start Aquarelle-specific styles
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+@font-face {
+    font-family: 'CircularBold';
+    src: url('../fonts/CircularStd-Bold.woff') format('woff2');
+}
+@font-face {
+    font-family: 'CircularStd';
+    src: url('../fonts/CircularStd-Book.woff') format('woff2');
+}
+
+
 body {
     width: 100%;
     height: 100%;
@@ -34,7 +44,7 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'CircularBold', Helvetica, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -43,6 +53,7 @@ p {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
+    font-family: 'CircularStd', Helvetica, sans-serif;
 }
 
 @media(min-width:767px) {
@@ -54,7 +65,8 @@ p {
 }
 
 a {
-    color: #219ab3;
+    color: #4f4f4f;
+    font-family: 'CircularStd', Helvetica, sans-serif;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -140,7 +152,39 @@ a:focus {
 .index-about h2 {
     padding-top: 50px;
 }
+
+
+.calendar-container {
+    display: flex;
+    align-content: flex-end;
+    background-color: blue;
+    width: 100%;
+    height: auto;
+    max-height: 600px;
+}
+.calendar-wrapper {
+    display: flex;
+    right: 30px;
+    background-color: red;
+    border-radius: 10px;
+    width: auto;
+    height: auto;
+}
+.calendar-image {
+    min-width: 400px;
+    min-height: 500px;
+    background-image: url('/img/calendar.jpg');
+
+}
 /* TODO :: MOVE THIS SHIT TO THE PAGES.CSS FILE */
+
+#members {
+    background: linear-gradient(-45deg, white 25%, transparent 25%, transparent 75%, #f4f4f4 75%, #f4f4f4) 0 0,
+    linear-gradient(-45deg, #f4f4f4 25%, transparent 25%, transparent 75%, white 75%, white) 1em 1em,
+    linear-gradient(45deg, #f4f4f4 17%, transparent 17%, transparent 25%, #f4f4f4 25%, #f4f4f4 36%, transparent 36%, transparent 64%, #f4f4f4 64%, #f4f4f4 75%, transparent 75%, transparent 83%, #f4f4f4 83%) 1em 1em;
+    background-color: white;
+    background-size: 2em 2em;
+}
 
 .chi-sig-member h4 {
     color: white;
@@ -159,7 +203,6 @@ a:focus {
     display: block;
     float: left;
     font-size: 1.1em;
-    text-align: -webkit-auto;
 }
 
 
@@ -167,7 +210,7 @@ a:focus {
     float: left;
     height: 100%;
     max-width: 300px;
-    margin-right 3%;
+    margin-right: 3%;
     padding: 2%;
     width: 35%;
 }
@@ -286,40 +329,6 @@ a:focus {
     -moz-animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
     -moz-animation-timing-function: linear;
-}
-
-@-webkit-keyframes pulse {    
-    0 {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-
-    50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-}
-
-@-moz-keyframes pulse {    
-    0 {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
-
-    50% {
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
-    }
-
-    100% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
 }
 
 .content-section {
@@ -454,13 +463,114 @@ ul.banner-social-buttons {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 50px 0 0;
 }
 
 footer p {
     margin: 0;
 }
 
+footer .row {
+
+}
+.footer {
+    padding-top: 30px;
+}
+footer ul {
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    margin-bottom: 30px;
+}
+.col-2 {
+    border-top: 2px solid red;
+    position: relative;
+    padding: 0 15px;
+    text-align: center;
+}
+.col-3 {
+    position: relative;
+    padding: 0 15px;
+    text-align: center;
+}
+.col-8 {
+    position: relative;
+    padding: 0 15px;
+    text-align: center;
+}
+
+.footer-icon {
+    margin: 20px auto;
+    padding: 20px;
+    width: 120px;
+    height: 148px;
+    background: url(../img/crest-icon.png) no-repeat center center scroll;
+}
+.footer-icon img {
+    width: 120px;
+    height: 148px;
+}
+.copyright {
+    text-align: center;
+    font-size: 90%;
+    color: #8f8f8f;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+@media (min-width: 760px) {
+    footer ul {
+        text-align: left;
+        padding: 20px 40px;
+    }
+    .col-2 {
+        margin-left: 8.33333%;
+        width: 16.66666%;
+        float: left;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    .col-3 {
+        width: 25%;
+        float: left;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+    .col-8 {
+        width: 66.66666%;
+        float: left;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    footer .col-8 {
+        border-top: 2px solid red;
+        min-height: 250px;
+    }
+    .copyright {
+        padding-top: 0;
+    }
+}
+
+
+.index-events-wrapper {
+    background: linear-gradient(-45deg, white 25%, transparent 25%, transparent 75%, #f4f4f4 75%, #f4f4f4) 0 0,
+    linear-gradient(-45deg, #f4f4f4 25%, transparent 25%, transparent 75%, white 75%, white) 1em 1em,
+    linear-gradient(45deg, #f4f4f4 17%, transparent 17%, transparent 25%, #f4f4f4 25%, #f4f4f4 36%, transparent 36%, transparent 64%, #f4f4f4 64%, #f4f4f4 75%, transparent 75%, transparent 83%, #f4f4f4 83%) 1em 1em;
+    background-color: white;
+    background-size: 2em 2em;
+    width: 100% !important;
+    margin: 0 !important;
+}
+.index-contact {
+    width: 100%;
+    background-color: transparent;
+    background-image: linear-gradient( to bottom, transparent, white 30%);
+    margin-bottom: 150px;
+}
 ::-moz-selection {
     text-shadow: none;
     background: #fcfcfc;
