--- a/css/pages.css
+++ b/css/pages.css
@@ -12,7 +12,11 @@ Includes the custom CSS styling for the website's members, events, and about pag
   src: url('../fonts/CircularStd-Book.woff') format('woff2');
 }
 
-
+footer {
+    width: 100%;
+    background-color: transparent;
+    background-image: linear-gradient( to bottom, transparent, white 70%);
+}
 
 /* About Page
 ================================== */
@@ -35,8 +39,10 @@ Includes the custom CSS styling for the website's members, events, and about pag
 
 
 
-#about h2 {
+.subheader {
     font-size: 70px;
+    line-height: 80px;
+    text-align: left;
     position: absolute;
     letter-spacing: 14px;
     padding-bottom: 40px;
@@ -61,31 +67,62 @@ Includes the custom CSS styling for the website's members, events, and about pag
     width: 100px;
     height: auto;
 }
-
+.events-wrapper .upto-calendar-plugin {
+    margin-top: 200px;
+}
 @media (max-width: 550px) {
-    #about .content {
-        width: 100vw !important;
-    }
+
 }
 @media (min-width: 550px) {
-    #about h2 {
+    .subheader {
         font-size: 10em;
+        line-height: 1em;
         left: -35px;
     }
     #about .content {
         padding-top: 250px;
     }
+    .events-wrapper .upto-calendar-plugin {
+        margin-top: 300px;
+    }
+    .events-wrapper .subheader {
+        left: -40px;
+    }
 }
 @media (min-width: 990px) {
-    #about h2 {
+    .subheader {
         font-size: 15em;
-        left: -100px;
+        line-height: 1em;
+        left: -75px;
+    }
+    .header span {
+        display: block;
+    }
+    .header {
+        height: 350px;
+    }
+    .events-wrapper .upto-calendar-plugin {
+        margin-top: 350px;
+    }
+    .events-wrapper .subheader {
+        left: -110px;
     }
 }
 @media (min-width: 1180px) {
-    #about h2 {
+    .subheader {
         left: -150px
     }
+    .header .subheader {
+        left: -75px !important;
+    }
+
+    .events-wrapper .upto-calendar-plugin {
+        margin-top: 400px;
+    }
+    .events-wrapper .subheader {
+        left: -110px;
+    }
+
 }
 
 
@@ -96,16 +133,15 @@ Includes the custom CSS styling for the website's members, events, and about pag
 
 #members {
     background:
-        linear-gradient(135deg, #ffffff 22px, #f2f2f2 22px, #f2f2f2 24px, transparent 24px, transparent 67px, #f2f2f2 67px, #f2f2f2 69px, transparent 69px),
-        linear-gradient(225deg, #ffffff 22px, #f2f2f2 22px, #f2f2f2 24px, transparent 24px, transparent 67px, #f2f2f2 67px, #f2f2f2 69px, transparent 69px)0 64px;
+        linear-gradient(135deg, #ffffff 22px, #f7f7f7 22px, #f7f7f7 24px, transparent 24px, transparent 67px, #f7f7f7 67px, #f7f7f7 69px, transparent 69px),
+        linear-gradient(225deg, #ffffff 22px, #f7f7f7 22px, #f7f7f7 24px, transparent 24px, transparent 67px, #f7f7f7 67px, #f7f7f7 69px, transparent 69px)0 64px;
     background-color:#ffffff;
     background-size: 64px 128px
 }
 
 .header {
     width: 100%;
-    height: 100%;
-    min-height: 200px;
+    min-height: 220px;
     max-height: 400px;
 }
 .header h1 {
@@ -114,7 +150,7 @@ Includes the custom CSS styling for the website's members, events, and about pag
 }
 /* Photos */
 .mdl-card__title {
-    background-color: none;
+    background-color: transparent;
 }
 
 .alex {  background-image: url("../img/profiles/melagrano-a.jpg")  }
@@ -156,13 +192,18 @@ Includes the custom CSS styling for the website's members, events, and about pag
 }
 .mdl-card__tag {
     padding: 10px 20px;
-    font-family: 'Roboto', 'Helvetica', Arial, sans-serif;
+    font-family: 'CircularBold', Helvetica, sans-serif;
     font-size: 18px;
     color: #d61313;
 }
 .mdl-card__title-text {
     color: #ffffff;
     padding-top: 100%
+}
+.mdl-card__supporting-text {
+    font-size: 16px;
+    line-height: 1.5;
+    font-family: 'CircularStd', Helvetica, sans-serif;
 }
 
 @media (min-width: 900px) {
@@ -183,4 +224,20 @@ Includes the custom CSS styling for the website's members, events, and about pag
         float: right;
     }
     
+}
+
+/*  Events Page
+=========================== */
+.events-page {
+    background:
+            linear-gradient(63deg, #fff 23%, transparent 23%) 7px 0,
+            linear-gradient(63deg, transparent 74%, #fff 78%),
+            linear-gradient(63deg, transparent 34%, #fff 38%, #fff 58%, transparent 62%),
+            #f9f9f9;
+    background-size: 16px 48px;
+    min-height: 400px;
+    margin-bottom: 50px;
+}
+.events-wrapper h2 {
+    z-index: 100;
 }
